# intercom_listener

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  send_read.cpp  server.cpp
3rdParties/: build.sh
3rdParties/curl/: .gitignor  .gitignore
3rdParties/curl/output/lib/: libcurl.so.4.8.0
3rdParties/curl/output/lib/pkgconfig/: libcurl.pc
3rdParties/json/: .gitignore
3rdParties/pistache/: .gitignore
api_curl/: CMakeLists.txt  api_curl.cpp
api_server/: CMakeLists.txt  api.cpp  api_curl.cpp
client/: .gitignore  CMakeLists.txt  client.cpp  client_include.hpp
config_reader/: a.out  conf.cpp  conf_reader.h
configs/: config.json
server/: .gitignore  CMakeLists.txt  api_func.cpp  device.cpp  device.h  serv_include.h  server.cpp
server/includes/: device.h  device.hpp  serv_include.h  serv_include.hpp  structs.hpp
server/src/: api_func.cpp  device.cpp  thread_func.cpp
spinlock/: a.out  main.cpp
